deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myweb-deployment
  labels:
    app: myweb
spec:
  replicas: 3
  selector:
    matchLabels:
      app: myweb
  template:
    metadata:
      labels:
        app: myweb
    spec:
      containers:
      - name: web
        image: quay.io/anandpavithran/infosys:1.0
        ports:
        - containerPort: 8080
