pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: web
  namespace: test200
  labels:
    role: myweb
spec:
  containers:
    - name: web
      image: quay.io/anandpavithran/infosys:1.0
      ports:
        - name: web
          containerPort: 8080
          protocol: TCP
