service.yml
apiVersion: v1
kind: Service
metadata:
  name: service-web
spec:
  selector:
    app: myweb
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
